--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -64,8 +64,8 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  text-align: left;
+  color: #101113;
+  text-align: justify;
   background-color: #fff;
 }
 
@@ -208,6 +208,7 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
+ 
 }
 
 svg:not(:root) {
