--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,39 +1,70 @@
-.decription-software{
-	color: blue;
+.img-person {
+    max-width: 100%;
+    /* max-height: 220px */
+    max-height: 220px;
+    /* border-radius: 0%; */
+    filter: grayscale(100%);
+    border-radius: 10%;
 }
+
+.img-person:hover {
+    filter: grayscale(80%);
+}
+
+.info-person {
+    font-size: 0.9em;
+    text-align: justify;
+}
+
+.decription-software {
+    color: blue;
+}
+
 .slider {
-	width: 95%;
-	margin: auto;
-	overflow: hidden;
+    width: 95%;
+    margin: auto;
+    overflow: hidden;
 }
 
 .slider ul {
-	display: flex;
-	padding: 0;
-	width: 400%;
-	
-	animation: cambio 20s infinite alternate linear;
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: cambio 20s infinite alternate linear;
 }
 
 .slider li {
-	width: 100%;
-	list-style: none;
+    width: 100%;
+    list-style: none;
 }
 
 .slider img {
-	width: 100%;
+    width: 100%;
 }
 
 @keyframes cambio {
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-	
-	25% {margin-left: -100%;}
-	45% {margin-left: -100%;}
-	
-	50% {margin-left: -200%;}
-	70% {margin-left: -200%;}
-	
-	75% {margin-left: -300%;}
-	100% {margin-left: -300%;}
+    0% {
+        margin-left: 0;
+    }
+    20% {
+        margin-left: 0;
+    }
+    25% {
+        margin-left: -100%;
+    }
+    45% {
+        margin-left: -100%;
+    }
+    50% {
+        margin-left: -200%;
+    }
+    70% {
+        margin-left: -200%;
+    }
+    75% {
+        margin-left: -300%;
+    }
+    100% {
+        margin-left: -300%;
+    }
 }
