--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -40,7 +40,8 @@
     
     .slider img {
         width: 100%;
-        max-height: 100px;
+        height: 150px;
+        align-content: center;
     }
     
     @keyframes cambio {
